@@ -1072,5 +1072,13 @@ fi
 [[ "[a] b [c] d" =~ ^\[[^]]+\] ]]
 [[ ${.sh.match} == '[a]' ]] || err_exit 'pattern ^\[[^]]+ broken'
 
+# Avoid printing excessive elements for .sh.match
+# https://github.com/ksh93/ksh/issues/308#issuecomment-1033259414
+# https://github.com/ksh93/ksh/pull/709
+exp='.sh.match .sh.match[1] .sh.match[2]'
+got=${ $SHELL -c 'print ${!.sh.match} ${!.sh.match[1]} ${!.sh.match[2]}' }
+[[ $exp == "$got" ]] || err_exit "'print \${!.sh.match}' should not print excessive elements" \
+	"(expected ${ printf %q "$exp" }, got ${ printf %q "$got" })"
+
 # ======
 exit $((Errors<125?Errors:125))
